# CPP-Web-Server

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt
docs/: DESIGN.md
include/core/: event_loop.hpp  pending_write.hpp  task_queue.hpp  thread_pool.hpp
include/http/: mime.hpp  parser.hpp  request.hpp  response.hpp  router.hpp  static_handler.hpp
include/net/: buffer.hpp  connection.hpp  epoll.hpp  socket.hpp
include/util/: logger.hpp
src/: CMakeLists.txt  main.cpp
src/core/: event_loop.cpp  thread_pool.cpp
src/http/: mime.cpp  parser.cpp  request.cpp  response.cpp  router.cpp  static_handler.cpp
src/net/: buffer.cpp  connection.cpp  epoll.cpp  socket.cpp
src/util/: logger.cpp
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_buffer.cpp  test_http_parser.cpp  test_http_response.cpp  test_logger.cpp  test_task_queue.cpp  test_thread_pool.cpp
